docs: updated swagger
